[tool.poetry]
name = "bloge"
version = "0.1.0"
description = ""
authors = ["StoneInfection <jokjoli777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
